Add background pattern

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </g>
           </svg>
         </div>
+        <img src="./images/bg-pattern-desktop.svg" alt="" class="bg-pattern-desktop">
       </header>
       <img src="./images/hero-mobile.jpg" alt="" class="info__img--mobile" />
       <main class="info__main">
