--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer ></script>
 
     <title>Frontend Mentor | Base Apparel coming soon page</title>
   </head>
@@ -60,9 +61,10 @@
           <form class="info__main__form">
             <input
               class="info__main__form__input"
-              type="email"
-              placeholder="Email Address"
+              type="mail"
+              placeholder="Email Address" id="email"
             />
+            <span class="error-message">Please provide a valid email</span>
             <button class="info__main__form__btn">
               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20">
                 <path
@@ -73,6 +75,7 @@
                 />
               </svg>
             </button>
+            <svg class="error-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><g fill="none" fill-rule="evenodd"><circle cx="12" cy="12" r="12" fill="#F96464"/><path fill="#FFF" fill-rule="nonzero" d="M13.256 6v9.056h-2V6h2zm-.944 12.464c-.384 0-.699-.104-.944-.312a1.027 1.027 0 0 1-.368-.824c0-.33.125-.608.376-.832.25-.224.563-.336.936-.336.373 0 .68.112.92.336.24.224.36.501.36.832 0 .341-.117.616-.352.824-.235.208-.544.312-.928.312z"/></g></svg>
           </form>
         </div>
       </main>
